finished the modifying data tutorial

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -16,9 +16,25 @@
                 {% else  %}
                     <td>{{ item.name }}</td>
                 {% endif  %}
+            <td>
+                <a href="/toogle/{{ item.id }}">
+                    <button>Toogle</button>
+                </a>
+            </td>
+            <td>
+                <a href="/edit/{{ item.id }}">
+                    <button>Edit</button>
+                </a>
+            </td>
+            <td>
+                <a href="/delete/{{ item.id }}">
+                    <button>Delete</button>
+                </a>
+            </td>
             </tr>
         {% empty %}
             <tr><td>You have nothing to do.</td></tr>
+
         {% endfor %}
     </table>
     <a href="/add">Add an item</a>
