--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -7,13 +7,13 @@
     <title>Django intro</title>
 </head>
 <body>
-    <h1>Add a todo item</h1>
-    <form method="POST" action="add">
+    <h1>Edit a todo item</h1>
+    <form method="POST">
         {% csrf_token %}
             {{ form.as_p }}
             <div>
                 <p>
-                    <button type="submit">Add Item!</button>
+                    <button type="submit">Update Item!</button>
                 </p>
             </div>
     </form>
